converted from session to jwt-based auth