@@ -1,64 +1,87 @@
 package org.example.config;
 
+import org.example.util.JwtFilter;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-public class SecurityConfig implements WebMvcConfigurer {
+public class SecurityConfig {
+
+    @Autowired
+    private JwtFilter jwtFilter;
+
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http)
+            throws Exception {
+
+        http
+                // Disable CSRF for JWT (stateless API)
+                .csrf(csrf -> csrf.disable())
+
+                // Enable CORS using our configuration bean
+                .cors(cors -> {})
+
+                // Make session stateless (VERY IMPORTANT for JWT)
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+
+                // Configure route security
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/auth/**").permitAll()
+                        .anyRequest().authenticated()
+                );
+
+        // Add JWT filter before Spring's default auth filter
+        http.addFilterBefore(jwtFilter,
+                UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
+    }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Allow all origins (for development)
-        // In production, replace with specific origins:
-        // configuration.setAllowedOrigins(Arrays.asList("https://yourdomain.com", "https://app.yourdomain.com"));
-        configuration.setAllowedOrigins(List.of("https://auth-app-hazel.vercel.app"));
+        // Allow your Vercel frontend
+        configuration.setAllowedOrigins(
+                List.of("https://auth-app-hazel.vercel.app")
+        );
 
-        // Allow all HTTP methods
+        // Allowed HTTP methods
         configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
         ));
 
         // Allow all headers
         configuration.setAllowedHeaders(List.of("*"));
 
-        // Allow credentials (cookies, authorization headers, etc.)
+        // Allow sending Authorization header & cookies
         configuration.setAllowCredentials(true);
 
-        // Expose specific headers to the client
-        configuration.setExposedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Total-Count",
-                "X-Page-Number",
-                "X-Page-Size"
-        ));
+        // Expose Authorization header to frontend
+        configuration.setExposedHeaders(List.of("Authorization"));
 
-        // Cache preflight response for 1 hour
+        // Cache preflight response (1 hour)
         configuration.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
         source.registerCorsConfiguration("/**", configuration);
 
         return source;
     }
-
-    /**
-     * CORS Filter Bean
-     * This filter will be applied to all requests
-     */
-    @Bean
-    public CorsFilter corsFilter() {
-        return new CorsFilter(corsConfigurationSource());
-    }
-
 }
